correct whitespace and padding to prevent constraint overflow (DLC-1132)

--- a/app/assets/stylesheets/stylesheets/base_layout/_facets.scss
+++ b/app/assets/stylesheets/stylesheets/base_layout/_facets.scss
@@ -41,6 +41,9 @@
 			color: $body-color;
 		}
 	}
+	.filter-value {
+		white-space: normal;
+	}
 	.top-panel-heading {
 		padding-left: 0;
 		padding-top: 0;
